--- a/Python Prequisites/28. Inheritance.ipynb
+++ b/Python Prequisites/28. Inheritance.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "# Single Inheritance\n",
+    "### Single Inheritance ###\n",
     "## Parent class\n",
     "class Car:\n",
     "    def __init__(self,doors,window,engineType):\n",
@@ -66,12 +66,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The person will drive a battery car\n",
-      "Tesla support self driving: True\n"
+      "Almond's owner is Pritam\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "### Multiple Inheritance ###\n",
+    "# Parent class1 \n",
+    "class Animal:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "    \n",
+    "    def sound(self):\n",
+    "        print(\"parent class method\")\n",
+    "\n",
+    "# Parent class2\n",
+    "class Pet:\n",
+    "    def __init__(self,owner):\n",
+    "        self.owner=owner\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Child/Derived Class\n",
+    "\n",
+    "class Dog(Animal,Pet):\n",
+    "    def __init__(self, name,owner):\n",
+    "        Animal.__init__(self,name)\n",
+    "        Pet.__init__(self,owner)\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(f\"{self.name}'s owner is {self.owner}\")\n",
+    "\n",
+    "mypet = Dog(\"Almond\",\"Pritam\")\n",
+    "mypet.speak()"
+   ]
   }
  ],
  "metadata": {
