--- a/Python Prequisites/29. Polymorphism.ipynb
+++ b/Python Prequisites/29. Polymorphism.ipynb
@@ -13,7 +13,7 @@
    "id": "7819c9b4",
    "metadata": {},
    "source": [
-    "# Method Overriding\n",
+    "## Method Overriding\n",
     "\n",
     "Method overriding allows a child class to provide a specific implementation of a method that is already defined in its parent class."
    ]
@@ -21,21 +21,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11840d0",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "id": "4c9a16b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Meow Meow'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "## Base Class\n"
+    "## Base Class \n",
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        return \"Sound of the Animal\"\n",
+    "\n",
+    "# Derived Class\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Woof\"\n",
+    "\n",
+    "# Derived Class\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Meow Meow\"\n",
+    "\n",
+    "\n",
+    "dog = Dog()\n",
+    "print(dog.speak())\n",
+    "\n",
+    "cat=Cat()\n",
+    "print(cat.speak())\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
